--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "1.1.5",
     "ws": "^7.4.4"
   }
